# tree-sitter-greycat

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  binding.gyp  grammar.js  package.json  pnpm-lock.yaml  project.gcl  setup.py  tree-sitter.json
.claude/: CLAUDE.md
bindings/c/: tree-sitter-greycat.h  tree-sitter-greycat.pc.in
bindings/node/: binding.cc  binding_test.js  index.js
bindings/rust/: build.rs  lib.rs
queries/: folds.scm  highlights.scm  indents.scm  injections.scm  locals.scm
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: binary_expr_precedence.txt  block_comment.txt  block_trailing_semi.txt  breakpoint_stmt.txt  for_in_clauses.txt  lambda_expr.txt  member_arrow_optional_property.txt  modvar_initializer.txt  optional_postfix.txt  static_expr_optional_property.txt  string_property.txt  top_level_expr.txt  try_catch_shapes.txt
